# terrain_treadmill

./: CMakeLists.txt  NOTES.md  README.md  package.xml
Arduino/: README.md
Arduino/Libraries/pid_lib/: Controller.cpp  Controller.h  Encoder.cpp  Encoder.h  Motors.cpp  Motors.h  Utilities.cpp  Utilities.h
Arduino/Libraries/ros_lib/aruco_msgs/: Marker.h  MarkerArray.h
Arduino/Libraries/ros_lib/marti_common_msgs/: BoolStamped.h  ByteArrayStamped.h  DurationStamped.h  Float32Stamped.h  Float64Stamped.h  Int16Stamped.h  Int32Stamped.h  Int64Stamped.h  Int8Stamped.h  KeyValue.h  KeyValueArray.h  StringArrayStamped.h  StringStamped.h  TimeStamped.h  UInt16Stamped.h  UInt32Stamped.h  UInt64Stamped.h  UInt8Stamped.h
Arduino/Libraries/ros_lib/marti_nav_msgs/: Command.h  DeleteRoute.h  GetRoute.h  GetRouteList.h  GridMap.h  LeadVehicle.h  Obstacle.h  ObstacleArray.h  PathPlanning.h  PlanRoute.h  Route.h  RoutePoint.h  RoutePosition.h  RouteSpeed.h  RouteSpeedArray.h  SaveRecordedRoute.h  SaveRoute.h  SetRoute.h  TeleopState.h  TrackedObject.h  TrackedObjectArray.h  UpdateRouteMetadata.h  VehicleControl.h  Wgs84Sample.h
Arduino/Libraries/ros_lib/marti_visualization_msgs/: TexturedMarker.h  TexturedMarkerArray.h
Arduino/Libraries/ros_lib/terrain_treadmill/: BallVelocity.h  ControlEffort.h  Eulers.h  MotorVelocity.h  TagState.h
Arduino/terrain_treadmill/: terrain_treadmill.ino
CAD/: 94033A432_MALE-FEMALE THRDED ROUND STANDOFF.SLDPRT  Adjustable_Angle.SLDPRT  AngleBracket.SLDPRT  Ballbot_Assembly.SLDASM  Ballbot_Assembly.X_T  Base.SLDPRT  Circle_Support.SLDPRT  Circle_Support_Cut.SLDDRW  Geared Motor Bracket.SLDPRT  Hub.SLDPRT  Motor.SLDPRT  Outer_Ball_Big.SLDPRT  Support.SLDPRT  montageschijf.sldprt  omniwheel_1.SLDPRT  omniwheel_complete.SLDASM  spacer.SLDPRT  subwheel.SLDPRT
CAD/Hemispheres/: Bottom.SLDPRT  Fixture.SLDPRT  Fixture_LaserCut.SLDDRW  Hemishere_Assem.SLDASM  Inner.SLDASM  Inner_Ball.SLDPRT  Inner_Connector.SLDPRT  Outer.SLDASM  Outer_Connector.SLDPRT  Ring.SLDPRT  Ring_Connected.SLDASM  Rings_LaserCut.SLDDRW  Rings_LaserCut2.SLDDRW  Rings_LaserCut3.SLDDRW  Support.SLDPRT  Through Rod.SLDPRT  Top.SLDPRT
CAD/Hemispheres/Support/: AddHoles_LaserCut.SLDDRW  Hemisphere.SLDPRT  Side1.SLDPRT  Side2.SLDPRT  Support.SLDASM  Support_LaserCut.SLDDRW
CAD/Shaft/: 6435K130_ONE-PIECE CLAMP-ON SHAFT COLLAR.SLDPRT  InnerBall.SLDPRT  Shaft.SLDPRT  ShaftAssembly.SLDASM
cfg/: PID.cfg  kalman.cfg  motor_test.cfg
config/: Graphs.perspective  camera.yaml  rviz_config.rviz  visualization.perspective  webcam.yaml
launch/: README.md  aruco_marker_finder.launch  flea3.launch  serial.launch  start.launch  webcam.launch
msg/: BallVelocity.msg  ControlEffort.msg  TagState.msg
src/: README.md  controller_node.py  filter_marker.py  forward_kinematics_node.py  inverse_kinematics_node.py  kalman_filter_node.py  motor_test_node.py  tag_marker.py
