<?xml version="1.0"?>
<package>
  <name>terrain_treadmill</name>
  <version>0.0.0</version>
  <description>Package containing code being used to run the complex terrain treadmill in the Terradynamics Lab at Johns Hopkins University</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="strebelblake@gmail.com">Blake Strebel</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>aruco</build_depend>
  <build_depend>aruco_msgs</build_depend>
  <build_depend>aruco_ros</build_depend>
  <build_depend>cv_camera</build_depend>
  <build_depend>rosserial_client</build_depend>
  <build_depend>rosserial_msgs</build_depend>
  <build_depend>rosserial_python</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>flea3</build_depend>
  <build_depend>camera_base</build_depend>
  <build_depend>image_view</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend> 
  <run_depend>image_view</run_depend>
  <run_depend>camera_base</run_depend>
  <run_depend>flea3</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>aruco</run_depend>
  <run_depend>aruco_msgs</run_depend>
  <run_depend>aruco_ros</run_depend>
  <run_depend>cv_camera</run_depend>
  <run_depend>rosserial_client</run_depend>
  <run_depend>rosserial_msgs</run_depend>
  <run_depend>rosserial_python</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
